fix openbot icon getting cut off

--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,6 @@ body {
 }
 
 img {
-  border-radius: 50%;
   width: 128px;
   margin-top: -8%;
   float: right;
